# gcp-local

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  release-please-config.json  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  release-please.yml
docker/: Dockerfile
docs/: deployment.md
docs/architecture/: bigquery.md  firestore.md  gcs.md  metadata.md  overview.md  pubsub.md  secret-manager.md
docs/development/: adding-a-service.md  ui.md
docs/services/: bigquery.md  firestore.md  gcs.md  metadata.md  pubsub.md  secret-manager.md
docs/superpowers/plans/: 2026-04-24-gcp-local-core.md  2026-04-24-gcp-local-gcs.md  2026-04-24-gcp-local-secret-manager.md  2026-04-25-gcp-local-bigquery.md  2026-04-26-gcp-local-bigquery-load-jobs.md  2026-04-26-oss-readiness-docs.md  2026-04-29-gcp-local-pubsub.md  2026-05-01-gcp-local-firestore.md  2026-05-02-order-pipeline-e2e-example.md  2026-05-02-pubsub-push-subscriptions.md  2026-05-03-services-ui-foundation.md  2026-05-18-metadata-server.md
docs/superpowers/specs/: 2026-04-24-gcp-local-core-design.md  2026-04-24-gcp-local-gcs-design.md  2026-04-24-gcp-local-secret-manager-design.md  2026-04-25-gcp-local-bigquery-design.md  2026-04-26-gcp-local-bigquery-load-jobs-design.md  2026-04-26-open-source-readiness-design.md  2026-04-29-gcp-local-pubsub-design.md  2026-05-01-gcp-local-firestore-design.md  2026-05-02-order-pipeline-e2e-example-design.md  2026-05-02-pubsub-push-subscriptions-design.md  2026-05-03-services-ui-design.md  2026-05-18-metadata-server-design.md
examples/order-pipeline/: README.md  docker-compose.yml  main.py  order_pipeline.py  test_e2e.py
scripts/: gen_protos.sh
src/gcp_local/: __main__.py  cli.py
src/gcp_local/core/: admin_api.py  context.py  errors.py  lifecycle.py  registry.py  service.py  state_hub.py  storage.py
src/gcp_local/core/ui_api/: bigquery.py  errors.py  gcs.py  router.py  schemas.py
src/gcp_local/services/_dummy/: __init__.py  service.py
src/gcp_local/services/bigquery/: __init__.py  app.py  errors.py  models.py  names.py  service.py  storage.py  types.py
src/gcp_local/services/firestore/: __init__.py  errors.py  models.py  names.py  service.py  servicer.py  storage.py  values.py
src/gcp_local/services/gcs/: __init__.py  errors.py  events.py  ids.py  models.py  preconditions.py  service.py  storage.py
src/gcp_local/services/metadata/: __init__.py  app.py  service.py  tokens.py
src/gcp_local/services/pubsub/: __init__.py  errors.py  models.py  names.py  service.py  servicer.py  storage.py
src/gcp_local/services/secret_manager/: __init__.py  models.py  names.py  service.py  servicer.py  storage.py
src/gcp_local/ui/: __init__.py
src/gcp_local/ui/static/: index.html
tests/integration/: conftest.py  test_bigquery_integration.py  test_core_end_to_end.py  test_docker_image.py  test_firestore_integration.py  test_gcs_integration.py  test_metadata_integration.py  test_pubsub_integration.py  test_secret_manager_integration.py  test_ui_api_integration.py
tests/unit/: test_admin_api.py  test_cli.py  test_context.py  test_core_errors_grpc.py  test_errors.py  test_generated_stubs.py  test_lifecycle.py  test_registry.py  test_service_protocol.py  test_state_hub.py  test_storage.py
tests/unit/core/: conftest.py  test_ui_api_bq_datasets.py  test_ui_api_bq_query.py  test_ui_api_bq_tables.py  test_ui_api_errors.py  test_ui_api_gcs_blob_delete.py  test_ui_api_gcs_blob_download.py  test_ui_api_gcs_blob_metadata.py  test_ui_api_gcs_blobs_list.py  test_ui_api_gcs_blobs_upload.py  test_ui_api_gcs_bucket_delete.py  test_ui_api_gcs_buckets.py  test_ui_api_router.py
tests/unit/services/bigquery/: test_autodetect_csv.py  test_autodetect_ndjson.py  test_coerce.py  test_connection.py  test_errors.py  test_gcs_uri.py  test_info_schema.py  test_jobs.py  test_load_dispositions.py  test_loads_bad_records.py  test_loads_csv.py  test_loads_csv_coercion.py  test_loads_ndjson.py  test_loads_ndjson_coercion.py  test_loads_source_uris.py  test_models.py  test_models_load.py  test_names.py  test_resumable.py  test_routes_datasets.py  test_routes_jobs.py  test_routes_tabledata.py  test_routes_tables.py  test_routes_uploads_multipart.py  test_routes_uploads_resumable.py  test_service_gcs_endpoint.py  test_service_scaffold.py  test_shims.py  test_storage.py  test_translate.py  test_types.py
tests/unit/services/firestore/: _query_helpers.py  test_aggregations.py  test_errors.py  test_models.py  test_names.py  test_query_collection_group.py  test_query_cursors.py  test_query_filters.py  test_query_orderby.py  test_service_scaffold.py  test_servicer_admin.py  test_servicer_commit.py  test_servicer_documents.py  test_servicer_run_query.py  test_storage.py  test_transactions.py  (+3 more)
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.test.ts  client.ts  types.ts
web/src/components/: AppLayout.module.css  AppLayout.test.tsx  AppLayout.tsx  ConfirmDialog.module.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx  EmptyState.module.css  EmptyState.test.tsx  EmptyState.tsx  ErrorBanner.module.css  ErrorBanner.test.tsx  ErrorBanner.tsx
web/src/hooks/: useAsync.test.ts  useAsync.ts
web/src/theme/: global.css
(+123 files in other folders)
