[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-local"
version = "0.0.1"
description = "Local emulator for Google Cloud Platform services."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Asaf Gallea" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.3",
    "mypy>=1.9",
    "google-cloud-storage>=2.14",
    "google-cloud-bigquery>=3.17",
    "google-cloud-pubsub>=2.19",
    "google-cloud-firestore>=2.14",
    "google-cloud-secret-manager>=2.18",
]

[project.scripts]
gcp-local = "gcp_local.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["gcp_local"]
mypy_path = "src"
