[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-local"
version = "0.0.1"
description = "Local emulator for Google Cloud Platform services."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Asaf Gallea" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "google-crc32c>=1.5",
    "grpcio>=1.60",
    "googleapis-common-protos>=1.63",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.3",
    "mypy>=1.9",
    "google-cloud-storage>=2.14",
    "google-cloud-bigquery>=3.17",
    "google-cloud-pubsub>=2.19",
    "google-cloud-firestore>=2.14",
    "google-cloud-secret-manager>=2.18",
    "grpcio-tools>=1.60",
    "types-grpcio>=1.0.0",
]

[project.scripts]
gcp-local = "gcp_local.cli:entrypoint"

[project.entry-points."gcp_local.services"]
gcs = "gcp_local.services.gcs:GcsService"
secret_manager = "gcp_local.services.secret_manager:SecretManagerService"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["gcp_local"]
mypy_path = "src"
exclude = ["src/gcp_local/generated/"]
