[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-local"
version = "0.4.0"
description = "Local emulator for Google Cloud Platform services."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Asaf Gallea" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "google-crc32c>=1.5",
    "grpcio>=1.60",
    "googleapis-common-protos>=1.63",
    "grpc-google-iam-v1>=0.13",
    "duckdb>=0.10",
    "sqlglot>=23.0",
    "numpy>=1.26",
    # Used by the BigQuery service to fetch gs:// URIs from the GCS service
    # (in-process or external) when running load-from-uri jobs.
    "httpx>=0.26",
    # Required by FastAPI for multipart/form-data parsing on the ui-api blob
    # upload endpoint. Imported transitively by FastAPI; pinned explicitly so
    # the production Docker image (pip install .) doesn't crash at request time.
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "aiohttp>=3.9",
    "google-cloud-storage>=2.14",
    "google-cloud-bigquery>=3.17",
    "google-cloud-pubsub>=2.19",
    "google-cloud-firestore>=2.14",
    "google-cloud-secret-manager>=2.18",
    "grpcio-tools>=1.60",
    "types-grpcio>=1.0.0",
    "db-dtypes>=1.2",
    "pyarrow>=15",
]

[project.scripts]
gcp-local = "gcp_local.cli:entrypoint"

[project.entry-points."gcp_local.services"]
gcs = "gcp_local.services.gcs:GcsService"
secret_manager = "gcp_local.services.secret_manager:SecretManagerService"
bigquery = "gcp_local.services.bigquery:BigQueryService"
pubsub = "gcp_local.services.pubsub:PubSubService"
firestore = "gcp_local.services.firestore:FirestoreService"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# grpc.aio's __del__ emits a "Event loop is closed" warning during gc that
# pytest's unraisableexception plugin tries to fingerprint — this slows the
# suite to a crawl when many gRPC servers are torn down. Disable that plugin.
addopts = "-p no:unraisableexception"

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["gcp_local"]
mypy_path = "src"
exclude = ["src/gcp_local/generated/", "examples/"]

[[tool.mypy.overrides]]
module = ["google.protobuf.*", "google.type.*", "google.rpc.*", "google.longrunning.*"]
ignore_missing_imports = true
